# maxon_epos4compact50-5can_ros2

./: LICENSE  README.md
maxon_epos4_ros2/: CMakeLists.txt  package.xml
maxon_epos4_ros2/config/bus_config_cia402_epos4_pos/: bus.yml  maxon_epos4_0x6050.eds
maxon_epos4_ros2/config/bus_config_cia402_epos4_vel/: bus.yml  maxon_epos4_0x1018.eds
maxon_epos4_ros2/launch/: bus_config_cia402_epos4_pos.launch.py  bus_config_cia402_epos4_vel.launch.py
maxon_epos4_ros2/src/: epos4_pos.cpp  epos4_vel.cpp
