<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>maxon_epos4_ros2</name>
  <version>1.0.0</version>
  <description>This package offers example configurations to connect a maxon epos4 motor controller to the ros2 environment via ros2_canopen package.</description>
  <maintainer email="support@maxongroup.com">MAKA</maintainer>
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>canopen</depend>
  <depend>lely_core_libraries</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
